added present and wrap processing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.error.include-message=always
 app.aws.access_key=\${APP_AWS_ACCESS_KEY}
 app.aws.secret_key=\${APP_AWS_SECRET_KEY}
 app.aws.region=\${APP_AWS_REGION}
+app.aws.present_topic_name=\${APP_AWS_PRESENT_TOPIC_NAME}
+app.aws.present_wrap_topic_name=\${APP_AWS_PRESENT_WRAP_TOPIC_NAME}
